name:                scheme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/edgarlepe/scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Edgar Giovanni Lepe
maintainer:          lepe.edgar10@gmail.com
copyright:           2016 Edgar Giovanni Lepe
category:            Interpreter
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , vector
  default-language:    Haskell2010

executable scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scheme
  default-language:    Haskell2010

test-suite scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scheme
                     , tasty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edgarlepe/scheme
